syntax = "proto3";

option go_package = "github.com/bitcoin-sv/ubsv/model";

package model;

// swagger:model MiningCandidate
message MiningCandidate {
  bytes id = 1;
  bytes previous_hash = 2;
  uint64 coinbase_value = 3;
  uint32 version = 4;
  bytes nBits = 5;
  uint32 time = 6;
  uint32 height = 7;
  repeated bytes merkle_proof = 8;
}

// swagger:model MiningSolution
message MiningSolution {
  bytes id = 1;
  bytes coinbase= 2;
  uint32 time = 3;
  uint32 nonce = 4;
  uint32 version = 5;
}

// swagger:enum NotificationType
enum NotificationType {
  Subtree = 0;
  Block = 1;
}
